Se deja el front funcional y se agregan pruebas e2e, quedan pendiente por validar pruebas de registro por formato de fecha en inputs

--- a/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
+++ b/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
@@ -15,8 +15,8 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let diaFestivo of diaFestivo" class="text-center">
-                        <td>{{diaFestivo.dia}}</td>
-                        <td>{{diaFestivo.fecha | date:'dd-MM-yyyy'}}</td>
+                        <td id="resultDia">{{diaFestivo.dia}}</td>
+                        <td id="resultFecha">{{diaFestivo.fecha | date:'dd-MM-yyyy'}}</td>
                     </tr>
                 </tbody>
             </table>
