--- a/src/app/feature/funcionario/componentes/funcionario/funcionario.component.html
+++ b/src/app/feature/funcionario/componentes/funcionario/funcionario.component.html
@@ -5,7 +5,7 @@
               <nav aria-label="breadcrumb">
                <ol class="breadcrumb">
                 <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               <a class="nav-link dropdown-toggle" href="#" id="funcionarioDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                  Funcionario
                </a>
                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -13,11 +13,11 @@
                </div>
              </li> 
              <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               <a class="nav-link dropdown-toggle" href="#" id="funcionarioSolicitudDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                  Solicitud
                </a>
                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-               <a class="dropdown-item" id="linkListSolicitudes" [routerLink]="['./listar-solicitudes',idFuncionario]" role="button">Listar solicitudes</a>
+               <a class="dropdown-item" id="linkListSolicitudesByIdFuncionario" [routerLink]="['./listar-solicitudes',idFuncionario]" role="button">Listar solicitudes</a>
                <a class="dropdown-item" id="linkRegistrarSolicitudes" [routerLink]="['./registrar-solicitud',idFuncionario]" role="button">Registrar solicitud</a>
               </div>
              </li> 
