--- a/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.html
+++ b/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.html
@@ -19,20 +19,20 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let fun of funcionario" class="text-center">
-                        <td>{{fun.idFuncionario}}</td>
-                        <td>{{fun.nombre}}</td>
-                        <td>{{fun.cedula}}</td>
-                        <td>{{fun.salario}}</td>
-                        <td>{{fun.fechaNacimiento | date: 'dd/MM/yyyy'}}</td>
-                        <td>{{fun.fechaIngreso | date:'dd/MM/yyyy'}}</td>
+                        <td id="funcionarioIdFuncionario">{{fun.idFuncionario}}</td>
+                        <td id="funcionarioNombre">{{fun.nombre}}</td>
+                        <td id="funcionarioCedula">{{fun.cedula}}</td>
+                        <td id="funcionarioSalario">{{fun.salario}}</td>
+                        <td id="funcionarioFechaNacimiento">{{fun.fechaNacimiento | date: 'dd/MM/yyyy'}}</td>
+                        <td id="funcionarioFechaIngreso">{{fun.fechaIngreso | date:'dd/MM/yyyy'}}</td>
                         <td>
                             <div class="btn-group">
-                                <button class="btn btn-secondary btn-sm dropdown-toggle" type="button"
+                                <button class="btn btn-secondary btn-sm dropdown-toggle" id="funcionarioOpcionAumentarSalarioDropdown" type="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Opciones
                                 </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <h4><a class="dropdown-item" (click)="aumentarSalario(fun)" >Aumentar Salario</a></h4>
+                                <div class="dropdown-menu"  aria-labelledby="dropdownMenuButton">
+                                    <h4><a class="dropdown-item" id="funcionarioAumentarSalario" (click)="aumentarSalario(fun)" >Aumentar Salario</a></h4>
                                 </div>
                             </div>
                         </td>
