--- a/src/app/feature/funcionario/componentes/registrar-funcionario/registrar-funcionario.component.html
+++ b/src/app/feature/funcionario/componentes/registrar-funcionario/registrar-funcionario.component.html
@@ -1,9 +1,9 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="registrarFuncionarioModal" tabindex="-1" role="dialog" aria-labelledby="registrarFuncionarioModal"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title" id="exampleModalLabel">Registro Funcionario</h3>
+                <h3 class="modal-title" id="registrarFuncionarioModal">Registro Funcionario</h3>
                 <button type="button" class="close" id="cerrarModal" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -34,7 +34,7 @@
                                 formControlName="fechaIngreso">
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-info">Registrar</button>
+                            <button type="submit" id="buttonRegistrarFuncionario" class="btn btn-info">Registrar</button>
                         </div>
                     </form>
                 </div>
