--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container-center" col-md-8 >
   <div class="row">
     <div class="col-md">
-        <button type="submit" data-toggle="modal" data-target="#exampleModal" class="btn btn-primary btn-lg btn-block">Simular
+        <button type="submit" data-toggle="modal" data-target="#simularFuncionarioModal" class="btn btn-primary btn-lg btn-block">Simular
           Funcionario</button>
       <br />
       <br />
@@ -11,12 +11,12 @@
   </div>
 </div>
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="simularFuncionarioModal" tabindex="-1" role="dialog" aria-labelledby="simularFuncionarioModal"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title" id="exampleModalLabel">Ingrese un Id</h3>
+                <h3 class="modal-title" id="simularFuncionarioModal">Ingrese un Id</h3>
                 <button type="button" class="close" id="cerrarModal" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
