--- a/src/app/feature/solicitud/componentes/listar-solicitud-por-funcionario/listar-solicitud-por-funcionario.component.html
+++ b/src/app/feature/solicitud/componentes/listar-solicitud-por-funcionario/listar-solicitud-por-funcionario.component.html
@@ -17,11 +17,11 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let solicitud of solicitudes" class="text-center">
-                        <td>{{solicitud.numSolicitud}}</td>
-                        <td>{{solicitud.fechaSolicitud | date:'dd-MM-yyyy'}}</td>
-                        <td>{{solicitud.justificacion}}</td>
-                        <td>{{solicitud.estado}}</td>
-                        <td>{{solicitud.respuesta}}</td>
+                        <td id="resultSolicitudnumSolicitud">{{solicitud.numSolicitud}}</td>
+                        <td id="resultSolicitudFechaSolicitud">{{solicitud.fechaSolicitud | date:'dd-MM-yyyy'}}</td>
+                        <td id="resultSolicitudJustificacion">{{solicitud.justificacion}}</td>
+                        <td id="resultSolicitudEstado">{{solicitud.estado}}</td>
+                        <td id="resultSolicitudRespuesta">{{solicitud.respuesta}}</td>
                     </tr>
                 </tbody>
             </table>
