--- a/src/app/feature/dia-festivo/componentes/registrar-dia-festivo/registrar-dia-festivo.component.html
+++ b/src/app/feature/dia-festivo/componentes/registrar-dia-festivo/registrar-dia-festivo.component.html
@@ -1,9 +1,9 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="registrarDiaFestivoModal" tabindex="-1" role="dialog" aria-labelledby="registrarDiaFestivoModal"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title" id="exampleModalLabel">Adicionar Dias Festivos</h3>
+                <h3 class="modal-title" id="registrarDiaFestivoModal">Adicionar Dias Festivos</h3>
                 <button type="button" class="close" id="cerrarModal" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -16,12 +16,12 @@
                                 formControlName="dia">
                         </div>
                         <div class="form-group">
-                            <label for="fechaNacimiento">Fecha:</label>
+                            <label for="fecha">Fecha:</label>
                             <input type="date" class="form-control" id="fecha" name="fecha"
                                 formControlName="fecha">
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-info">Agregar</button>
+                            <button type="submit" id="agregarDiaFestivo" class="btn btn-info">Agregar</button>
                         </div>
                     </form>
                 </div>
@@ -29,3 +29,4 @@
         </div>
     </div>
 </div>
+<router-outlet></router-outlet>
