--- a/src/app/feature/solicitud/componentes/registrar-solicitud/registrar-solicitud.component.html
+++ b/src/app/feature/solicitud/componentes/registrar-solicitud/registrar-solicitud.component.html
@@ -11,7 +11,7 @@
                         formControlName="justificacion" rows="3"></textarea>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-info">Registrar</button>
+                    <button type="submit" id="buttonRegistrarSolicitud" class="btn btn-info">Registrar</button>
                 </div>
             </form>
         </div>
