--- a/src/app/feature/solicitud/componentes/listar-solicitud-por-funcionario/listar-solicitud-por-funcionario.component.html
+++ b/src/app/feature/solicitud/componentes/listar-solicitud-por-funcionario/listar-solicitud-por-funcionario.component.html
@@ -5,14 +5,14 @@
         </div>
         <br />
         <div class="card-body">
-            <table class="table table-hover">
+            <table class="table table-hover" summary="Listado de solicitudes por funcionario">
                 <thead>
                     <tr class="text-center">
-                        <td>Numero Solicitud</td>
-                        <td>Fecha Solicitud</td>
-                        <td>Descripcion</td>
-                        <td>Estado</td>
-                        <td>Respuesta</td>
+                        <th>Numero Solicitud</th>
+                        <th>Fecha Solicitud</th>
+                        <th>Descripcion</th>
+                        <th>Estado</th>
+                        <th>Respuesta</th>
                     </tr>
                 </thead>
                 <tbody>
