--- a/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.html
+++ b/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.html
@@ -5,16 +5,16 @@
         </div>
         <br />
         <div class="card-body">
-            <table class="table table-hover">
+            <table class="table table-hover" summary="Listado de solicitudes registradas">
                 <thead>
                     <tr class="text-center">
-                        <td>Id Funcionaro</td>
-                        <td>Numero Solicitud</td>
-                        <td>Fecha Solicitud</td>
-                        <td>Descripcion</td>
-                        <td>Estado</td>
-                        <td>Respuesta</td>
-                        <td></td>
+                        <th>Id Funcionaro</th>
+                        <th>Numero Solicitud</th>
+                        <th>Fecha Solicitud</th>
+                        <th>Descripcion</th>
+                        <th>Estado</th>
+                        <th>Respuesta</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
