--- a/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
+++ b/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
@@ -6,11 +6,11 @@
         </div>
         <br />
         <div class="card-body">
-            <table class="table table-hover">
+            <table class="table table-hover"  summary = "Listado de fechas agregadas como Dias festivos">
                 <thead>
                     <tr class="text-center">
-                        <td><b>Dia</b></td>
-                        <td><b>Fecha</b></td>
+                        <th><strong>Dia</strong></th>
+                        <th><strong>Fecha</strong></th>
                     </tr>
                 </thead>
                 <tbody>
