--- a/src/app/feature/funcionario/componentes/consultar-detalle-funcionario/consultar-detalle-funcionario.component.html
+++ b/src/app/feature/funcionario/componentes/consultar-detalle-funcionario/consultar-detalle-funcionario.component.html
@@ -4,14 +4,14 @@
            <h3 style="text-align: center;">Detalle Funcionario</h3>
         </div>
         <div class="card-body">
-            <table class="table table-striped">
+            <table class="table table-striped" summary = "Listado de datos de un funcionario">
                 <thead>
                     <tr class="text-center">
-                        <td>Nombre</td>
-                        <td>Cedula</td>
-                        <td>Salario</td>
-                        <td>Fecha de Nacimiento</td>
-                        <td>Fecha de Ingreso</td>
+                        <th>Nombre</th>
+                        <th>Cedula</th>
+                        <th>Salario</th>
+                        <th>Fecha de Nacimiento</th>
+                        <th>Fecha de Ingreso</th>
                     </tr>
                 </thead>
                 <tbody>
