--- a/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.html
+++ b/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.html
@@ -5,16 +5,16 @@
             <h3 style="text-align: center;">Listado de Funcionarios</h3>
         </div>
         <div class="card-body">
-            <table class="table table-striped">
+            <table class="table table-striped" summary="Listado de Funcionarios registrados en el sistema">
                 <thead>
                     <tr class="text-center">
-                        <td>Id Funcionario</td>
-                        <td>Nombre</td>
-                        <td>Cedula</td>
-                        <td>Salario</td>
-                        <td>Fecha de Nacimiento</td>
-                        <td>Fecha de Ingreso</td>
-                        <td></td>
+                        <th>Id Funcionario</th>
+                        <th>Nombre</th>
+                        <th>Cedula</th>
+                        <th>Salario</th>
+                        <th>Fecha de Nacimiento</th>
+                        <th>Fecha de Ingreso</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
