Se corrigen 26 new bugs - sonar

--- a/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
+++ b/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
@@ -9,8 +9,8 @@
             <table class="table table-hover"  summary = "Listado de fechas agregadas como Dias festivos">
                 <thead>
                     <tr class="text-center">
-                        <th><strong>Dia</strong></th>
-                        <th><strong>Fecha</strong></th>
+                        <th scope="col"><strong>Dia</strong></th>
+                        <th scope="col"><strong>Fecha</strong></th>
                     </tr>
                 </thead>
                 <tbody>
