--- a/src/app/feature/funcionario/componentes/consultar-detalle-funcionario/consultar-detalle-funcionario.component.html
+++ b/src/app/feature/funcionario/componentes/consultar-detalle-funcionario/consultar-detalle-funcionario.component.html
@@ -7,11 +7,11 @@
             <table class="table table-striped" summary = "Listado de datos de un funcionario">
                 <thead>
                     <tr class="text-center">
-                        <th>Nombre</th>
-                        <th>Cedula</th>
-                        <th>Salario</th>
-                        <th>Fecha de Nacimiento</th>
-                        <th>Fecha de Ingreso</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Cedula</th>
+                        <th scope="col">Salario</th>
+                        <th scope="col">Fecha de Nacimiento</th>
+                        <th scope="col">Fecha de Ingreso</th>
                     </tr>
                 </thead>
                 <tbody>
