--- a/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.html
+++ b/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.html
@@ -8,13 +8,13 @@
             <table class="table table-striped" summary="Listado de Funcionarios registrados en el sistema">
                 <thead>
                     <tr class="text-center">
-                        <th>Id Funcionario</th>
-                        <th>Nombre</th>
-                        <th>Cedula</th>
-                        <th>Salario</th>
-                        <th>Fecha de Nacimiento</th>
-                        <th>Fecha de Ingreso</th>
-                        <th></th>
+                        <th scope="col">Id Funcionario</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Cedula</th>
+                        <th scope="col">Salario</th>
+                        <th scope="col">Fecha de Nacimiento</th>
+                        <th scope="col">Fecha de Ingreso</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
