--- a/src/app/feature/solicitud/componentes/listar-solicitud-por-funcionario/listar-solicitud-por-funcionario.component.html
+++ b/src/app/feature/solicitud/componentes/listar-solicitud-por-funcionario/listar-solicitud-por-funcionario.component.html
@@ -8,11 +8,11 @@
             <table class="table table-hover" summary="Listado de solicitudes por funcionario">
                 <thead>
                     <tr class="text-center">
-                        <th>Numero Solicitud</th>
-                        <th>Fecha Solicitud</th>
-                        <th>Descripcion</th>
-                        <th>Estado</th>
-                        <th>Respuesta</th>
+                        <th scope="col">Numero Solicitud</th>
+                        <th scope="col">Fecha Solicitud</th>
+                        <th scope="col">Descripcion</th>
+                        <th scope="col">Estado</th>
+                        <th scope="col">Respuesta</th>
                     </tr>
                 </thead>
                 <tbody>
