--- a/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.html
+++ b/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.html
@@ -8,13 +8,13 @@
             <table class="table table-hover" summary="Listado de solicitudes registradas">
                 <thead>
                     <tr class="text-center">
-                        <th>Id Funcionaro</th>
-                        <th>Numero Solicitud</th>
-                        <th>Fecha Solicitud</th>
-                        <th>Descripcion</th>
-                        <th>Estado</th>
-                        <th>Respuesta</th>
-                        <th></th>
+                        <th scope="col">Id Funcionaro</th>
+                        <th scope="col">Numero Solicitud</th>
+                        <th scope="col">Fecha Solicitud</th>
+                        <th scope="col">Descripcion</th>
+                        <th scope="col">Estado</th>
+                        <th scope="col">Respuesta</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
