Commit sonar Deuda

--- a/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
+++ b/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
@@ -6,7 +6,7 @@
         </div>
         <br />
         <div class="card-body">
-            <table class="table table-hover"  summary = "Listado de fechas agregadas como Dias festivos">
+            <table class="table table-hover" >
                 <thead>
                     <tr class="text-center">
                         <th scope="col"><strong>Dia</strong></th>
