--- a/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.html
+++ b/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.html
@@ -32,7 +32,7 @@
                                     Opciones
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <h4><a class="dropdown-item" data-toggle="modal" data-target="#exampleModal" (click)="goResolverSolicitud(solicitud)" >Resolver solicitud</a></h4><!--[routerLink]="['resolver-solicitud']"-->
+                                    <h4><a class="dropdown-item" data-toggle="modal" data-target="#exampleModal" (click)="goResolverSolicitud(solicitud)" >Resolver solicitud</a></h4>
                                 </div>
                             </div></td>
                     </tr>
