--- a/src/app/feature/funcionario/componentes/consultar-detalle-funcionario/consultar-detalle-funcionario.component.html
+++ b/src/app/feature/funcionario/componentes/consultar-detalle-funcionario/consultar-detalle-funcionario.component.html
@@ -4,7 +4,7 @@
            <h3 style="text-align: center;">Detalle Funcionario</h3>
         </div>
         <div class="card-body">
-            <table class="table table-striped" summary = "Listado de datos de un funcionario">
+            <table class="table table-striped"  aria-describedby = "Listado de datos de un funcionario">
                 <thead>
                     <tr class="text-center">
                         <th scope="col">Nombre</th>
