--- a/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.html
+++ b/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.html
@@ -5,7 +5,7 @@
             <h3 style="text-align: center;">Listado de Funcionarios</h3>
         </div>
         <div class="card-body">
-            <table class="table table-striped" summary="Listado de Funcionarios registrados en el sistema">
+            <table class="table table-striped"  aria-describedby="Listado de Funcionarios registrados en el sistema">
                 <thead>
                     <tr class="text-center">
                         <th scope="col">Id Funcionario</th>
