--- a/src/app/feature/solicitud/componentes/listar-solicitud-por-funcionario/listar-solicitud-por-funcionario.component.html
+++ b/src/app/feature/solicitud/componentes/listar-solicitud-por-funcionario/listar-solicitud-por-funcionario.component.html
@@ -5,7 +5,7 @@
         </div>
         <br />
         <div class="card-body">
-            <table class="table table-hover" summary="Listado de solicitudes por funcionario">
+            <table class="table table-hover"  aria-describedby="Listado de solicitudes por funcionario">
                 <thead>
                     <tr class="text-center">
                         <th scope="col">Numero Solicitud</th>
