--- a/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.html
+++ b/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.html
@@ -5,7 +5,7 @@
         </div>
         <br />
         <div class="card-body">
-            <table class="table table-hover" summary="Listado de solicitudes registradas">
+            <table class="table table-hover"  aria-describedby="Listado de solicitudes registradas">
                 <thead>
                     <tr class="text-center">
                         <th scope="col">Id Funcionaro</th>
