--- a/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
+++ b/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.html
@@ -5,8 +5,9 @@
             <h2 style="text-align: center">Listado dias Festivos</h2>
         </div>
         <br />
+        <div  class="table-wrapper-scroll-y my-custom-scrollbar">
         <div class="card-body">
-            <table class="table table-hover" aria-describedby="Listado de dias festivos">
+            <table class="table table-hover"  aria-describedby="Listado de dias festivos">
                 <thead>
                     <tr class="text-center">
                         <th scope="col"><strong>Dia</strong></th>
@@ -20,6 +21,7 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
         </div>
     </div>
 </div>
