--- a/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.css
+++ b/src/app/feature/dia-festivo/componentes/listar-dia-festivo/listar-dia-festivo.component.css
@@ -4,5 +4,14 @@
     align-items: center;
     margin-top: 0%;
   }
+  .my-custom-scrollbar {
+    position: relative;
+    height: 300px;
+    width: 108%;
+    overflow: auto;
+    }
+    .table-wrapper-scroll-y {
+    display: block;
+    }
   
  
