--- a/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.css
+++ b/src/app/feature/funcionario/componentes/listar-funcionario/listar-funcionario.component.css
@@ -3,3 +3,12 @@
     display: flex;
     flex-flow: column;
   }
+  .my-custom-scrollbar {
+    position: relative;
+    height: 300px;
+    width: 100%;
+    overflow: auto;
+    }
+    .table-wrapper-scroll-y {
+    display: block;
+    }
