--- a/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.css
+++ b/src/app/feature/solicitud/componentes/listar-solicitud/listar-solicitud.component.css
@@ -4,4 +4,13 @@
     align-items: center;
     margin-top: 0%;
   }
+  .my-custom-scrollbar {
+    position: relative;
+    height: 300px;
+    width: 100%;
+    overflow: auto;
+    }
+    .table-wrapper-scroll-y {
+    display: block;
+    }
   
